--- a/src/pages/auth/login/Login.css
+++ b/src/pages/auth/login/Login.css
@@ -52,6 +52,9 @@
   color: #000;
   font-weight: 600;
 }
+.login_page a:hover {
+  color: #ffd808;
+}
 
 /* ------------- MEDIA QUERIES --------------- */
 @media (max-width: 1059px) {
