--- a/src/pages/auth/profile/profile.css
+++ b/src/pages/auth/profile/profile.css
@@ -1,164 +1,119 @@
-.profile_page{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.profile_page .col-left{
-    max-width: 400px;
-    min-width: 300px;
-    padding: 0 10px;
-    margin: auto;
+/*----------------------PROFILE----------------*/
+.container-main-profile {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #FFF9DA;
 }
 
-.profile_page .col-left .avatar{
-    width: 150px;
-    height: 150px;
-    overflow: hidden;
-    position: relative;
-    margin: 15px auto;
-    border: 1px solid #ddd;
-    border-radius: 50%;
-    cursor: pointer;
+.container-profile {
+  height: 80vh;
+  width: 100%;
+  max-width: 400px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 14px;
+  padding: 40px;
+  background-color: #fff;
 }
-.profile_page .col-left img{
-    width: 100%;
-    height: 100%;
-    display: block;
-    object-fit: cover;
+.title-profile {
+  text-shadow: 2px 2px 2px rgba(34, 34, 34, 0.2);
+  font-size: 20px;
+  text-align: center;
 }
-
-.profile_page .col-left .avatar span{
-    position: absolute;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    background: #fff8;
-    text-align: center;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: rgb(255, 140, 45);
-    transition: 0.3s ease-in-out;
+.container-info-profile{
+  width: 100%;
 }
-.profile_page .col-left .avatar:hover span{
-    bottom: -15%;
+.container-image {
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.profile_page .col-left #file_up{
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    opacity: 0;
+.profile-image {
+  border-radius: 50%;
+  margin-bottom: 3px;
+  width: 22%;
 }
 
-.profile_page .col-left h2{
-    text-align: center;
-    font-size: 1.7rem;
-    text-transform: uppercase;
-    color: #333;
-    margin: 10px 0;
-}
-.profile_page .col-left label{
-    display: block;
-    margin-top: 5px;
-}
-.profile_page .col-left input{
-    width: 100%;
-    height: 40px;
-    margin: 5px 0;
-    border: none;
-    outline: none;
-    background: #fee;
-    padding: 0 5px;
-}
-.profile_page .col-left button{
-    background: #333;
-    color: white;
-    padding: 10px 25px;
-    text-transform: uppercase;
-    letter-spacing: 1.4px;
-    margin: 10px 0;
+.profile-button-update {
+  font-weight: bold;
+  background-color: #ffd808;
+  margin: auto;
+  padding: 5px;
+  width: 100%;
+  border: none;
+  cursor: pointer;
+  display: block;
 }
 
-/* ----------- Col Right----------- */
-.profile_page .col-right{
-    padding: 0 10px;
-    flex: 1;
-    min-width: 300px;
+/*----------------------INFO STUDENTS----------------*/
+.container-main-admin {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.profile_page .col-right h2{
-    font-size: 1.7rem;
-    text-transform: uppercase;
-    color: #333;
-    margin: 10px 0;
+.container-info-admin {
+  border-radius: 14px;
+  padding: 48px;
+  background-color: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  width: 90%;
 }
+.profile-button-createUser {
+  font-weight: bold;
+  background-color: #ffd808;
+  padding: 5px ;
+  width: 25% ;
+  border: none;
+  cursor: pointer;
+  display: block;
+}
+.title-profile-user{
+  text-shadow: 2px 2px 2px rgba(34, 34, 34, 0.2);
+  font-size: 25px;
+  text-align: center;
+}
+
 
 /* ------------ Table------------ */
-.customers{
-    border-collapse: collapse;
-    width: 100%;
+.table-info-students {
+  border-collapse: collapse;
+  width: 100%;
 }
-.customers td,
-.customers th{
-    border: 1px solid #ddd;
-    padding: 8px;
-    min-width: 100px;
+.table-info-students td,
+.table-info-students th {
+  padding: 8px;
+  min-width: 100px;
 }
-.customers tr:nth-child(even){
-    background: #f2f2f2;
+.table-info-students th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background: rgba(255, 218, 10, 0.835);
+  color: black;
 }
-.customers th{
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background: #555;
-    color: white;
+.table-info-students i {
+  cursor: pointer;
 }
-.customers i{
-    cursor: pointer;
+.table-info-students .fa-check {
+  color: green;
 }
-.customers .fa-check{
-    color: green;
+.table-info-students .fa-times {
+  color: red;
 }
-.customers .fa-times{
-    color: red;
+.table-info-students .icon-edit {
+  background: rgba(255, 218, 10, 0.835);
+  padding: 7px;
+  color: black;
+  font-size: 15px;
 }
-.customers .fa-edit{
-    background: whitesmoke;
-    padding: 7px;
-    color: #555;
-    font-size: 10px;
-}
-.customers .fa-trash-alt{
-    background: red;
-    padding: 7px;
-    color: white;
-    font-size: 10px;
-    margin-left: 7px;
-}
-
-
-/* -------------- Edit User ----------------- */
-.edit_user .go_back{
-    background: white;
-    margin: 20px;
-    font-size: 1.2rem;
-}
-.edit_user .col-left{
-    margin-top: 50px;
-}
-.edit_user .col-left input{
-    background: #eee;
-}
-.edit_user .col-left #isAdmin{
-    width: 20px;
-    height: 20px;
-    transform: translateY(3px);
-    margin: 10px 0;
-}
-.edit_user .col-left #isAdmin + label{
-    display: inline-block;
-    margin-left: 5px;
+.table-info-students .fa-trash-alt {
+  background: rgba(255, 218, 10, 0.835);
+  padding: 7px;
+  color: black !important;
+  font-size: 15px;
+  margin-left: 10px;
 }
