--- a/src/pages/auth/register/Register.css
+++ b/src/pages/auth/register/Register.css
@@ -1,4 +1,15 @@
 /* ------------- REGISTER --------------- */
+a {
+  text-decoration: none !important;
+}
+ul {
+  list-style: none !important;
+}
+button {
+  border: none !important;
+  outline: none !important;
+  cursor: pointer !important;
+}
 .container-register {
   width: 100%;
   height: 100vh;
@@ -7,8 +18,8 @@
   align-items: center;
   background-color: #fff9da;
 }
-.register_page {
-  height: 90%;
+.container-register-page {
+  height: 95%;
   max-width: 776px;
   border-radius: 14px;
   width: 100%;
@@ -42,8 +53,17 @@
   font-size: 20px;
   text-align: center;
 }
-
-
+.button-submit-photo {
+  font-weight: bold;
+  background-color: #ffd808;
+  border-radius: 10px;
+  margin: auto;
+  padding: 2px;
+  width: 20%;
+  border: none;
+  cursor: pointer;
+  display: block;
+}
 .button-submit-register {
   font-weight: bold;
   background-color: #ffd808;
@@ -60,34 +80,26 @@
   color: #000;
   font-weight: 600;
 }
-.button-submit-photo{
-  background-color: #D3D1D1;
-  border-radius: 14px;
-  font-weight: lighter;
-  margin:auto;
-  padding: 8px;
-  width: 20%;
-  border: none;
-  cursor: pointer;
-  display: block;
+.container-register-page a:hover{
+  color: #ffd808;
 }
+
 /* -------------MEDIA QUERIES--------------- */
 @media (max-width: 1059px) {
-  .register_page {
+  .container-register-page {
     height: 99%;
   }
   .title-register,
   .link-register {
     font-size: 15px;
   }
-  
 }
 @media (max-width: 700px) {
   .logo-register {
     width: 50%;
   }
 
-  .register_page {
+  .container-register-page {
     width: 80%;
     margin: 20px 0;
   }
@@ -104,8 +116,9 @@
     display: flex;
     flex-direction: column;
   }
-  .button-submit-photo{
-    margin-top:8px ;
+  .button-submit-photo {
+    margin-top: 8px;
+    padding: 6px;
     width: 30%;
   }
 }
@@ -114,5 +127,16 @@
   .title-register,
   .link-register {
     font-size: 14px;
+  }
+}
+/* -------------MEDIA QUERIES--------------- */
+@media (max-width: 370px) {
+  .button-submit-photo {
+    font-size: 15px;
+    margin-top: 8px;
+    width: 30%;
+  }
+  .button-submit-register {
+    font-size: 13px;
   }
 }
