--- a/src/componentes/header&footer/headerFooterStyles.css
+++ b/src/componentes/header&footer/headerFooterStyles.css
@@ -22,16 +22,20 @@ header {
   align-items: center;
 }
 
+.linksHeader {
+  margin: 0 10px;
+  color: black;
+}
+.linksHeader:hover {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
+
 .iconsContainer > div {
   display: flex;
   align-items: center;
   margin-left: 20px;
-}
-
-.iconsContainer > div > a {
-  margin: 0 10px;
-  text-decoration: none;
-  color: black;
 }
 
 .btnConfig {
@@ -72,7 +76,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 120px;
+  width: 130px;
 }
 
 .notificationsConfigContainer {
@@ -80,10 +84,36 @@ footer {
   align-items: center;
 }
 
+.notificationsConfigContainer > i {
+  margin-left: 10px;
+}
+
 .hamburguerMenu {
   display: none;
   cursor: pointer;
 }
+
+/*------------Dropdown Styles----------*/
+
+.caret-off::before {
+  display: none;
+}
+.caret-off::after {
+  display: none;
+}
+
+#dropdown-basic {
+  background-color: white;
+  margin-right: 0.3rem;
+}
+
+.dropdown-item {
+  padding: 0.5rem 1.5rem;
+}
+
+/* .dropdown-item > span {
+  margin-right: 1rem;
+} */
 
 @media (max-width: 885px) {
   .hamburguerMenu {
