--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap");
+
+* {
+  font-family: "Roboto", sans-serif;
+  padding: 0px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #ededed;
+}
+
+i {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+i:hover {
+  color: #ffc107;
 }
