--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 * {
   font-family: "Roboto", sans-serif;
@@ -18,4 +18,12 @@ i {
 
 i:hover {
   color: #ffc107;
+}
+
+li {
+  list-style: none;
+}
+
+p {
+  margin-bottom: 0;
 }
