--- a/src/pages/auth/forgotPassword/ForgotPassword.css
+++ b/src/pages/auth/forgotPassword/ForgotPassword.css
@@ -37,6 +37,11 @@
   display: block;
 }
 /* ------------- MEDIA QUERIES --------------- */
+@media (max-width: 1230px) {
+  .container-forgotPassword {
+    height: 59%;
+  }
+}
 @media (max-width: 900px) {
   .container-forgotPassword {
     height: 60vh;
