--- a/src/pages/auth/login/Login.css
+++ b/src/pages/auth/login/Login.css
@@ -68,6 +68,11 @@
     height: 90vh;
   }
 }
+@media (max-width: 400px) {
+  .login_page{
+    width: 96%;;
+  }
+}
 /* ------------- MEDIA QUERIES --------------- */
 @media (max-width: 300px) {
   .button-login {
