--- a/src/componentes/header&footer/UserLink.css
+++ b/src/componentes/header&footer/UserLink.css
@@ -1,19 +1,22 @@
+.icon-signIn {
+  font-size: 20px;
+  color: #ffd808;
+}
 
-  .icon-signIn {
-    font-size: 20px;
-    color: #ffd808;
+.container-psd {
+  display: flex;
+}
 
-  }
+.link {
+  text-decoration: none;
+  color: black;
+}
+.img-avatar {
+  width: 30px;
+  margin-right: 0.5rem;
+}
 
-  .container-psd {
-    width: 100%;
-    display: flex;
-  }
-  
-  .link{
-    text-decoration: none;
-    color: black;
-  }
-  .img-avatar{
-    width: 30px;
-  }
+.avatarContainer {
+  display: flex;
+  align-items: center;
+}
