--- a/src/pages/announcements/announcementStyles.css
+++ b/src/pages/announcements/announcementStyles.css
@@ -122,6 +122,42 @@
   margin-right: 4rem;
 }
 
+/* dasboard styles */
+
+.containerAnnounce{
+  width: 450px;
+  height: 250px;
+  overflow-y: scroll;
+
+}
+
+.announceContainerDash{
+  width: 100%;
+  margin: auto;
+  max-width: 1300px;
+  background-color: white;
+  padding: 2.5rem;
+  border-bottom: 1px solid rgb(185, 185, 185);
+}
+
+.announceContainer > h5 {
+  font-weight: bold;
+}
+
+.textAnnouncementContainerDash {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.textAnnouncementContainer > p {
+  max-width: 900px;
+  margin: 2rem 0;
+  margin-right: 4rem;
+}
+
+
 @media (max-width: 700px) {
   .textAnnouncementContainer {
     flex-direction: column;
