--- a/src/pages/auth/profile/profile.css
+++ b/src/pages/auth/profile/profile.css
@@ -1,15 +1,16 @@
 /*----------------------PROFILE----------------*/
+.container-all-information {
+  width: 100%;
+  background-color: #fff9da;
+}
 .container-main-profile {
+  padding: 33px 0;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #FFF9DA;
 }
-
 .container-profile {
-  height: 80vh;
   width: 100%;
   max-width: 400px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -22,7 +23,7 @@
   font-size: 20px;
   text-align: center;
 }
-.container-info-profile{
+.container-info-profile {
   width: 100%;
 }
 .container-image {
@@ -36,7 +37,6 @@
   margin-bottom: 3px;
   width: 22%;
 }
-
 .profile-button-update {
   font-weight: bold;
   background-color: #ffd808;
@@ -65,20 +65,18 @@
 .profile-button-createUser {
   font-weight: bold;
   background-color: #ffd808;
-  padding: 5px ;
-  width: 25% ;
+  padding: 5px;
+  width: 25%;
   border: none;
   cursor: pointer;
   display: block;
 }
-.title-profile-user{
+.title-profile-user {
   text-shadow: 2px 2px 2px rgba(34, 34, 34, 0.2);
   font-size: 25px;
   text-align: center;
 }
-
-
-/* ------------ Table------------ */
+/*----------------------TABLE----------------*/
 .table-info-students {
   border-collapse: collapse;
   width: 100%;
@@ -98,10 +96,10 @@
 .table-info-students i {
   cursor: pointer;
 }
-.table-info-students .fa-check {
+.table-info-students .icon-check {
   color: green;
 }
-.table-info-students .fa-times {
+.table-info-students .icon-times {
   color: red;
 }
 .table-info-students .icon-edit {
@@ -110,10 +108,123 @@
   color: black;
   font-size: 15px;
 }
-.table-info-students .fa-trash-alt {
+.table-info-students .icon-trash {
   background: rgba(255, 218, 10, 0.835);
   padding: 7px;
   color: black !important;
   font-size: 15px;
   margin-left: 10px;
+}
+/* ------------- MEDIA QUERIES --------------- */
+@media (max-width: 1200px) {
+  .container-profile {
+    width: 70%;
+  }
+  .container-main-admin {
+    width: 100%;
+  }
+  .container-info-admin {
+    margin-top: 30px;
+    width: 80%;
+  }
+  .container-main-profile {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 561px) {
+  .container-profile {
+    width: 65%;
+  }
+  .title-profile {
+    font-size: 18px;
+  }
+  .container-main-admin {
+    width: 100%;
+  }
+  .container-info-admin {
+    padding: 20px;
+    border-radius: 16px;
+    margin-top: 30px;
+    width: 90%;
+  }
+  .table-info-students td,
+  .table-info-students th {
+    font-size: 14px;
+  }
+  .container-main-profile {
+    flex-wrap: wrap;
+  }
+  
+  .title-profile-user {
+    font-size: 19px;
+  }
+  .profile-button-createUser {
+    margin-top: 10px;
+    font-size: 13px;
+    width: 25%;
+  }
+}
+@media (max-width: 418px) {
+  .container-profile {
+    width:100%;
+  }
+  .title-profile {
+    font-size: 16px;
+  }
+  .container-main-admin {
+    width: 100%;
+  }
+  .title-profile-user {
+    font-size: 17px;
+  }
+  .container-info-admin {
+    padding: 20px;
+    border-radius: 14px;
+    margin-top: 30px;
+    width: 95%;
+  }
+  .table-info-students td,
+  .table-info-students th {
+    font-size: 12px;
+  }
+  .container-main-profile {
+    flex-wrap: wrap;
+  }
+  .profile-button-createUser {
+    margin-top: 10px;
+    font-size: 12px;
+    width: 35%;
+  }
+}
+@media (max-width: 365px) {
+  .container-profile {
+    width:93%;
+  }
+  .title-profile {
+    font-size: 16px;
+  }
+  .container-main-admin {
+    width: 100%;
+  }
+  .title-profile-user {
+    font-size: 17px;
+  }
+  .container-info-admin {
+    padding: 20px;
+    border-radius: 14px;
+    margin-top: 30px;
+    width: 95%;
+  }
+  .table-info-students td,
+  .table-info-students th {
+    font-size: 12px;
+  }
+  .container-main-profile {
+    flex-wrap: wrap;
+  }
+  .profile-button-createUser {
+    margin-top: 10px;
+    font-size: 12px;
+    width: 35%;
+  }
 }
