--- a/src/pages/projects/student/deliveryProject/deliveryStyles.css
+++ b/src/pages/projects/student/deliveryProject/deliveryStyles.css
@@ -19,7 +19,7 @@
   margin-right: 20px;
   margin-bottom: 3rem;
   height: 600px;
-  border: 1.3px solid rgb(211, 211, 211);
+  box-shadow: rgb(0 0 0 / 16%) 0px 3px 5px;
   border-radius: 4px;
   background-color: white;
   padding: 1.5rem;
@@ -27,8 +27,8 @@
 
 .competenciesContainer {
   width: 30%;
-  height: 300px;
-  border: 1.3px solid rgb(211, 211, 211);
+  height: 370px;
+  box-shadow: rgb(0 0 0 / 16%) 0px 3px 5px;
   border-radius: 4px;
   background-color: white;
 }
@@ -68,7 +68,8 @@
 .cardStudent,
 .cardTrainer {
   width: 70%;
-  border: 1.3px solid rgb(211, 211, 211);
+  border: 1.3px solid rgb(243, 243, 243);
+  box-shadow: rgb(0 0 0 / 10%) 0px 3px 5px;
   border-radius: 4px;
   background-color: white;
   padding: 1rem;
