--- a/src/pages/projects/trainer/showProjects/showProjects.css
+++ b/src/pages/projects/trainer/showProjects/showProjects.css
@@ -11,8 +11,11 @@
 .cardProject {
   background-color: white;
   max-width: 340px;
+  min-width: 240px;
   margin: 0 auto;
   border-radius: 0 0 12px 12px;
+  box-shadow: rgb(0 0 0 / 19%) 0px 3px 5px;
+  border: 1px solid rgb(230, 230, 230);
   display: flex;
   flex-direction: column;
 }
@@ -26,6 +29,13 @@
   font-size: 1.1rem;
   font-weight: bold;
   margin: 0.5rem 0 1.5rem 0;
+}
+
+.title2 {
+  font-size: 1.1rem;
+  font-weight: bold;
+  width: 90%;
+  margin: 6rem auto 2.5rem auto;
 }
 
 .descriptionContainer {
@@ -42,7 +52,18 @@
 }
 
 .btnProject {
-  margin: 2rem 0 0 0;
+  /* margin: 2rem 0 0 0;
+  margin-top: 4rem; */
+  margin-top: 3rem;
+  background-color: #ffd808;
+  border-radius: 4px;
+  font-weight: bold;
+  color: black;
+  padding: 0.5rem 1rem;
+}
+
+.buttonContainer {
+  margin-top: 2rem;
 }
 
 .cardTitleSection {
@@ -59,6 +80,15 @@
   font-size: 17px;
   font-weight: bold;
   margin-bottom: 0;
+}
+
+/*-------------Slider styles-------------*/
+
+.carouselContainer {
+  max-width: 1300px;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 3rem;
 }
 
 @media (max-width: 500px) {
