--- a/src/componentes/header&footer/headerFooterStyles.css
+++ b/src/componentes/header&footer/headerFooterStyles.css
@@ -12,7 +12,6 @@ header {
   margin: 35px auto;
 }
 
-
 .Logo {
   height: 45px;
 }
@@ -93,14 +92,18 @@ footer {
   display: none;
   cursor: pointer;
 }
-.link-singIn{
+.link-singIn {
   text-transform: uppercase;
   color: #000;
 }
-.link-singIn:hover{
+.link-singIn:hover {
   color: #222222;
 }
 
+.sign {
+  font-size: 15px;
+  margin-right: 1rem;
+}
 /*------------Dropdown Styles----------*/
 
 .caret-off::before {
@@ -118,10 +121,6 @@ footer {
 .dropdown-item {
   padding: 0.5rem 1.5rem;
 }
-
-/* .dropdown-item > span {
-  margin-right: 1rem;
-} */
 
 @media (max-width: 885px) {
   .hamburguerMenu {
