--- a/src/pages/dashboard/charts/chart.css
+++ b/src/pages/dashboard/charts/chart.css
@@ -2,11 +2,12 @@
   width: 90%;
   max-width: 1300px;
   margin: auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .chartsContainer {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .chartContainer {
@@ -15,6 +16,8 @@
   padding: 2rem;
   width: 100%;
   max-width: 300px;
+  box-shadow: rgb(0 0 0 / 16%) 0px 3px 5px;
+  border: 1px solid rgb(230, 230, 230);
 }
 
 .nameChart {
@@ -70,7 +73,23 @@
   left: 60px;
 }
 
+@media (max-width: 900px) {
+  .containerAnnounce {
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .chartContainerMain {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
 @media (max-width: 500px) {
+  .containerAnnounce {
+    width: 100%;
+  }
+
   .chartContainer {
     margin-right: 0;
     padding: 1rem;
